...
                        }) {
                            HStack {
                                Image(systemName: "plus.circle")
                                    .foregroundStyle(.lumenGreen)
                                    .font(.title)
                                
                                Text("Add Task")
                                    .font(.title2)
                                    .frame(alignment: .center)
                                    .foregroundStyle(.lumenGreen)
                            }
                        }
                        .frame(maxWidth: .infinity)
...
                        }
                }
            }
        }
        .alert(isPresented: $showDeleteConfirmation) {
            Alert(
                title: Text("Delete Task"),
                message: Text("Are you sure you want to delete this task?"),
                primaryButton: .destructive(Text("Delete")) {
                    if let task = taskToDelete {
                        viewContext.delete(task)
                        saveContext()
                    }
                },
                secondaryButton: .cancel()
...
